# exchangeTest

./: .coveragerc  .gitignore  .pylintrc  COVERAGE_ANALYSIS_REPORT.md  Dockerfile.admin  Dockerfile.api  Dockerfile.market-data  Dockerfile.matching  Dockerfile.wallet  FINAL_COVERAGE_ACHIEVEMENT_REPORT.md  FINAL_COVERAGE_REPORT.md  Makefile  QUALITY_REVIEW_PROCEDURE.md  QUALITY_REVIEW_REPORT.md  README.md  docker-compose.yml  fix_websocket_tests.py  pyproject.toml
deployments/postgres/: init.sql
deployments/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  CODE_QUALITY.md  PROJECT_STATUS.md  database-quality-test-plan.md  implementation-plan.md  openapi.yaml
docs/runbooks/: quickstart.md
src/alt_exchange/: __init__.py
src/alt_exchange/api/: __init__.py  main.py  websocket.py
src/alt_exchange/core/: config.py  enums.py  events.py  exceptions.py  models.py
src/alt_exchange/infra/: bootstrap.py  datastore.py  event_bus.py
src/alt_exchange/infra/database/: __init__.py  base.py  coverage.py  factory.py  in_memory.py  postgres.py  repositories.py
src/alt_exchange/services/account/: __init__.py  service.py
src/alt_exchange/services/admin/: __init__.py  service.py
src/alt_exchange/services/matching/: engine.py  orderbook.py
src/alt_exchange/services/wallet/: service.py
tests/: conftest.py  test_account_service.py  test_account_service_additional.py  test_account_service_additional_methods.py  test_account_service_coverage.py  test_account_service_final_coverage.py  test_account_service_methods.py  test_account_service_more_coverage.py  test_account_service_simple.py  test_admin_service_additional.py  test_admin_service_extended.py  test_admin_service_methods.py  test_admin_service_simple.py  test_api.py  test_api_enhanced.py  test_api_main.py  test_api_main_additional_methods.py  test_api_main_coverage.py  test_api_main_final_coverage.py  test_api_main_methods.py  test_api_main_missing_lines.py  test_api_main_more_coverage.py  test_api_main_simple.py  test_api_simple.py  test_api_websocket.py  test_api_websocket_simple.py  test_bootstrap_basic.py  test_bootstrap_simple.py  test_broadcaster_additional.py  test_broadcaster_coverage.py  test_comprehensive_coverage.py  test_core_config.py  test_core_enums.py  test_core_events.py  test_core_exceptions.py  test_core_models.py  test_coverage_database_simple.py  test_coverage_final.py  test_coverage_methods.py  test_coverage_more_coverage.py  (+58 more)
