[tool.poetry]
name = "exchange-test"
version = "0.1.0"
description = "거래소 테스트 프로젝트"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
  { include = "alt_exchange", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12.4"
pandas = "^2.0.0"
numpy = "^1.21.0"
requests = "^2.28.0"
websocket-client = "^1.4.0"
rich = "^12.0.0"
python-dotenv = "^0.19.0"
schedule = "^1.2.0"
loguru = "^0.6.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
websockets = "^12.0"
aiokafka = "^0.10.0"
aioredis = "^2.0.1"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"
pika = "^1.3.0"
web3 = "^6.15.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.1"
black = "^22.0.0"
pylint = "^2.15.0"
isort = "^5.12.0"
bandit = "^1.7.0"
safety = "^2.3.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pylint]
max-line-length = 88
disable = [
    "C0114",  # missing-module-docstring
    "C0116",  # missing-function-docstring
    "C0115",  # missing-class-docstring
    "C0103",  # invalid-name (for short variable names like db, id)
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0912",  # too-many-branches
    "R0915",  # too-many-statements
    "E1101",  # no-member (for dynamic attributes)
    "E0611",  # no-name-in-module
    "E0401",  # import-error
]
init-hook = 'import sys; sys.path.append("src")'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"
